Prevent mousedown shift in IE11

--- a/client/StatusFlow.scss
+++ b/client/StatusFlow.scss
@@ -55,6 +55,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
   .bar {
     width: 64px;
